--- a/farmerapp/templates/farmerapp/edit.html
+++ b/farmerapp/templates/farmerapp/edit.html
@@ -62,9 +62,9 @@
                         <label for="farmingtype">Farming Type</label>
                         <select class="form-control" id="farmingtype" name="farmingtype" required>
                             <option selected>{{ posts.farming }}</option>
-                            {% for d in farming %}
-                                <option value="{{ d.farmingtype }}">{{ d.farmingtype }}</option>
-                            {% endfor %}
+                            
+                                <option value="{{ d.farmingtype }}">wheet</option>
+                            
                         </select>
                     </div>
                     <br>
