--- a/farmerapp/templates/farmerapp/farmingdetails.html
+++ b/farmerapp/templates/farmerapp/farmingdetails.html
@@ -42,10 +42,10 @@ Farmer Details
           <td>{{farmer.address}}</td>
           <td>{{ farmer.farming_type.farming_type }}</td>
           <td>
-            <a href="{% url 'edit' %}"><button class="btn btn-success">Edit </button> </a>
+            <a href="{% url 'edit' farmer.id %}"><button class="btn btn-success">Edit </button> </a>
           </td>
           <td>
-            <a href="{% url 'delete'  %}"><button onclick="return confirm('Are you sure to Delete data');" class="btn btn-success">Delete </button> </a>
+            <a href="{% url 'delete' farmer.id %}"><button onclick="return confirm('Are you sure to Delete data');" class="btn btn-success">Delete </button> </a>
           </td>
           <td>
             <a href="{% url 'addagroproducts' %}"><button class="btn btn-success">ADD </button> </a>
