--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,12 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class=""><a href="/">Home</a></li>
+          <li class=""><a href="{% url 'home' %}">Home</a></li>
          
  <li><a href="{% url 'register' %}">Farmer Register</a></li>
  <li><a href="{% url 'addfarming' %}">Add Farming</a></li>
  <li><a href="{% url 'farmingdetails' %}">Farmer Details</a></li>
  <li><a href="{% url 'agroproducts' %}">Agro Products</a></li>
- <li><a href="{% url 'records' %}">Records</a></li>
  
        
     
